# cd2netmd_gui

./: .gitattributes  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  QCD2NetMD.pro  QCD2NetMD_de_AT.ts  README.md  audio.cpp  audio.h  caboutdialog.cpp  caboutdialog.h  caboutdialog.ui  caudiotools.cpp  caudiotools.h  ccddb.cpp  ccddb.h  ccddbentriesdialog.cpp  ccddbentriesdialog.h  ccddbentriesdialog.ui  ccditemmodel.cpp  ccditemmodel.h  ccdtableview.cpp  ccdtableview.h  ccliprocess.cpp  ccliprocess.h  cd2netmd_gui.pro  cdaoconfdlg.cpp  cdaoconfdlg.h  cdaoconfdlg.ui  cdrutil.cpp  cdrutil.h  cffmpeg.cpp  cffmpeg.h  cflac.cpp  cflac.h  cjacktheripper.cpp  cjacktheripper.h  cmdtreemodel.cpp  cmdtreemodel.h  (+52 more)
help/: NetMD Wizard.html  NetMD Wizard.md
include/: libcue.h
linux/: atracdenc  netmd.rules
linux_deps/include/cdio/: version.h
linux_deps/include/cdio++/: cdtext.hpp
linux_deps/lib/: libcdio++.la  libcdio.la  libcdio_cdda.la  libcdio_paranoia.la  libiso9660++.la  libiso9660.la  libudf.la
linux_deps/lib/cmake/json-c/: json-c-config.cmake
linux_deps/lib/pkgconfig/: json-c.pc  libcdio++.pc  libcdio.pc  libcdio_cdda.pc  libcdio_paranoia.pc  libcue.pc  libiso9660++.pc  libiso9660.pc  libudf.pc
linux_deps/share/info/: libcdio.info
linux_deps/share/man/man1/: cd-drive.1  cd-info.1  cd-read.1  iso-info.1  iso-read.1
mac/: atracdenc  libjson-c.5.dylib  libsndfile.1.dylib
prebuilt/linux/config/: 20-netmd.fdi
prebuilt/linux/include/: netmd++.h
prebuilt/linux/include/cdio/: cdio_config.h  mmc.h  mmc_ll_cmds.h
prebuilt/linux/include/cdio++/: iso9660.hpp
prebuilt/linux/include/libcue/: libcue.h
prebuilt/linux/lib/: libcdio++.la  libcdio.la  libcdio_cdda.la  libcdio_paranoia.la  libiso9660++.la  libiso9660.la  libudf.la  libusb-1.0.la
prebuilt/linux/lib/cmake/json-c/: json-c-targets-release.cmake  json-c-targets.cmake
prebuilt/linux/lib/pkgconfig/: json-c.pc  libcdio++.pc  libcdio.pc  libcdio_cdda.pc  libcdio_paranoia.pc  libcue.pc  libiso9660++.pc  libiso9660.pc  libnetmd++.pc  libnetmd.pc  libudf.pc  libusb-1.0.pc  taglib.pc  taglib_c.pc
prebuilt/linux/share/info/: dir
prebuilt/linux/share/man/man1/: cd-drive.1  cd-info.1  cd-paranoia.1  cd-read.1  iso-info.1  iso-read.1
prebuilt/mac/include/: netmd++.h
prebuilt/mac/include/cdio/: cdio_config.h  version.h
prebuilt/mac/include/cdio++/: iso9660.hpp
prebuilt/mac/lib/: libFLAC.8.dylib  libcdio++.la  libcdio.la  libcdio_cdda.la  libcdio_paranoia.la  libiso9660++.la  libiso9660.la  libogg.0.dylib  libudf.la  libvorbis.0.dylib  libvorbisenc.2.dylib
prebuilt/mac/lib/cmake/json-c/: json-c-targets.cmake
prebuilt/mac/lib/pkgconfig/: json-c.pc  libcdio++.pc  libcdio.pc  libcdio_cdda.pc  libcdio_paranoia.pc  libcue.pc  libiso9660++.pc  libiso9660.pc  libnetmd++.pc  libnetmd.pc  libudf.pc  taglib.pc  taglib_c.pc
prebuilt/mac/share/info/: dir  libcdio.info
prebuilt/mac/share/man/man1/: cd-drive.1  cd-info.1  cd-read.1  iso-info.1  iso-read.1
prebuilt/windows/include/: CNetMdApi.h  libnetmd.h  netmd++.h
prebuilt/windows/include/cdio/: cdio_config.h  types.h  version.h
prebuilt/windows/lib/: libcdio++.la  libcdio.la  libcdio_cdda.la  libcdio_paranoia.la  libiso9660++.la  libiso9660.la  libudf.la
prebuilt/windows/lib/cmake/json-c/: json-c-targets.cmake
prebuilt/windows/lib/pkgconfig/: json-c.pc  libcdio++.pc  libcdio.pc  libcdio_cdda.pc  libcdio_paranoia.pc  libcue.pc  libiso9660++.pc  libiso9660.pc  libnetmd++.pc  libnetmd.pc  libudf.pc  taglib.pc  taglib_c.pc
prebuilt/windows/share/info/: libcdio.info
prebuilt/windows/share/man/man1/: cd-drive.1  cd-info.1  cd-read.1  iso-info.1  iso-read.1
release/: create_dmg.sh
res/: minidisc.icns
